--- a/theme/partials/awards.hbs
+++ b/theme/partials/awards.hbs
@@ -30,7 +30,7 @@
         </div>
         {{#if date}}
         <div class="date">
-          {{Y date}}
+          {{Y date}} - {{Y date2}}
         </div>
         {{/if}}
       </header>
