--- a/theme/partials/volunteer.hbs
+++ b/theme/partials/volunteer.hbs
@@ -31,12 +31,12 @@
         <div class="date">
           {{#if startDate}}
           <span class="startDate">
-          {{MY startDate}}
+          {{DMY startDate}}
           </span>
           {{/if}}
           {{#if endDate}}
           <span class="endDate">
-          - {{MY endDate}}
+          - {{DMY endDate}}
           </span>
           {{else}}
           <span class="endDate">
