--- a/theme/partials/education.hbs
+++ b/theme/partials/education.hbs
@@ -6,85 +6,88 @@
 
   <section id="education">
     {{#each resume.education}}
-    <section class="education-item">
-      {{#if summary}}
-        {{#if @first}}
-        <input id="education-item-{{@index}}" type="checkbox" class="toggle-item" checked="checked" />
-        {{else}}
-        <input id="education-item-{{@index}}" type="checkbox" class="toggle-item" />
-        {{/if}}
-        <label for="education-item-{{@index}}"></label>
-      {{/if}}
-      <header class="clear">
-        <div class="header-left">
-          {{#if studyType}}
-          <div class="studyType">
-            {{studyType}}
-          </div>
-          {{/if}}
-          {{#if area}}
-          <div class="area">
-            {{area}}
-          </div>
-          {{/if}}
-          {{#if institution}}
-          <div class="institution">
-            {{institution}}
-          </div>
-          {{/if}}
-        </div>
-        <div class="date">
-          {{#if startDate}}
-          <span class="startDate">
-          {{Y startDate}}
-          </span>
-          {{/if}}
-          {{#if endDate}}
-          <span class="endDate">
-          - {{Y endDate}}
-          </span>
-          {{else}}
-          <span class="endDate">
-          - Current
-          </span>
-          {{/if}}
-        </div>
-      </header>
-
-      {{#location}}
-      <span class="location">
-        <span class="fas fa-map-marker-alt"></span>
-        {{#if city}}
-        <span class="city">{{city}}, </span>
-        {{/if}}
-        {{#if countryCode}}
-        <span class="countryCode">({{countryCode}})</span>
-        {{/if}}
-        {{#if region}}
-        <span class="region">{{region}}</span>
-        {{/if}}
-      </span>
-      {{/location}}
-
-      {{#if courses.length}}
-      <ul class="courses">
-        {{#each courses}}
-        <li>{{.}}</li>
-        {{/each}}
-      </ul>
-      {{/if}}
-
-      <div class="item">
-        {{#if gpa}}
-        <div class='gpa'>
-          <strong> Grade:</strong> <span>{{gpa}}</span>
-        </div>
-        {{/if}}
+      <section class="education-item">
         {{#if summary}}
-          <div class="summary">{{paragraphSplit summary}}</div>
+          {{#if @first}}
+          <input id="education-item-{{@index}}" type="checkbox" class="toggle-item" checked="checked" />
+          {{else}}
+          <input id="education-item-{{@index}}" type="checkbox" class="toggle-item" />
+          {{/if}}
+          <label for="education-item-{{@index}}"></label>
         {{/if}}
-      </div>
-    </section>
+        <header class="clear">
+          <div class="date">
+            {{#if startDate}}
+            <span class="startDate">
+              {{Y startDate}}
+            </span>
+            {{/if}}
+            {{#if endDate}}
+            <span class="endDate">
+              - {{Y endDate}}
+            </span>
+            {{else}}
+            <span class="endDate">
+              - Present
+            </span>
+            {{/if}}
+          </div>
+          <div class="header-left">
+            {{#if studyType}}
+            <div class="studyType">
+              {{studyType}}
+            </div>
+            {{/if}}
+            {{#if area}}
+            <div class="area">
+              {{area}}
+            </div>
+            {{/if}}
+            {{#if institution}}
+            <div class="institution">
+              {{institution}}
+            </div>
+            {{/if}}
+          </div>
+        </header>
+
+        {{#location}}
+        <span class="location">
+          <span class="fas fa-map-marker-alt"></span>
+          {{#if city}}
+          <span class="city">{{city}}, </span>
+          {{/if}}
+          {{#if countryCode}}
+          <span class="countryCode">({{countryCode}})</span>
+          {{/if}}
+          {{#if region}}
+          <span class="region">{{region}}</span>
+          {{/if}}
+        </span>
+        {{/location}}
+
+        {{#if courses.length}}
+        <ul class="courses">
+          {{#each courses}}
+          <li>{{.}}</li>
+          {{/each}}
+        </ul>
+        {{/if}}
+
+        <div class="item">
+          {{#if gpa}}
+          <div class='gpa'>
+            <strong> Grade:</strong> <span>{{gpa}}</span>
+          </div>
+          {{/if}}
+          {{#if summary}}
+            <div class="summary">{{paragraphSplit summary}}</div>
+          {{/if}}
+        </div>
+      </section>
+      {{#unless @last}}
+        <hr class="divider" />
+      {{/unless}}
     {{/each}}
   </section>
 </section>
