--- a/theme/partials/publications.hbs
+++ b/theme/partials/publications.hbs
@@ -24,7 +24,7 @@
           <a target="_blank" href="{{website}}">{{name}}</a>
           </span>
           {{else}}
-          {{name}}
+          {{ paragraphSplit  name}}
           {{/if}}
           </span>
           {{/if}}
@@ -36,7 +36,7 @@
         </div>
         {{#if releaseDate}}
         <span class="date">
-        {{DMY releaseDate}}
+        {{Y releaseDate}}
         </span>
         {{/if}}
       </header>
