--- a/style.css
+++ b/style.css
@@ -435,8 +435,14 @@ section .location {
   width: 10em;
 }
 
+#references {
+  display: flex;
+  justify-content: flex-start;
+}
+
 #references .item {
   padding-left: .5em;
+  margin-right: 1.5em;
   border-left: 5px solid #ff6d1f;
 }
 
