--- a/theme/partials/references.hbs
+++ b/theme/partials/references.hbs
@@ -1,7 +1,7 @@
 {{#if resume.references.length}}
 <section class="section">
   <header>
-    <h2 class='section-title'>Referee</h2>
+    <h2 class='section-title'>Referees</h2>
   </header>
   <section id="references">
     {{#each resume.references}}
