feat(theme): customize

--- a/theme/partials/education.hbs
+++ b/theme/partials/education.hbs
@@ -75,9 +75,9 @@
       {{/if}}
 
       <div class="item">
-        {{#if gpa}}
+        {{#if score}}
         <div class='gpa'>
-          <strong> Grade:</strong> <span>{{gpa}}</span>
+          <strong> Grade:</strong> <span>{{score}}</span>
         </div>
         {{/if}}
         {{#if summary}}
