--- a/resume.hbs
+++ b/resume.hbs
@@ -14,10 +14,11 @@
   
   <div id="resume">
     {{> basics }}
-    {{> skills }}
     {{> work }}
     {{> education }}
+    {{> speaking }}
     {{> projects }}
+    {{> skills }}
     {{> volunteer }}
     {{> awards }}
     {{> publications }}
