feat(writing): add section for articles

--- a/resume.hbs
+++ b/resume.hbs
@@ -18,6 +18,7 @@
     {{> education }}
     {{> speaking }}
     {{> projects }}
+    {{> writing }}
     {{> skills }}
     {{> volunteer }}
     {{> awards }}
