--- a/theme/partials/work.hbs
+++ b/theme/partials/work.hbs
@@ -64,7 +64,7 @@
     	</span> {{/if}} {{#if keywords.length}}
     	<ul class="keywords">
       	{{#each keywords}}
-      	<li>{{.}}</li>
+      	<li id="working-item">{{.}}</li>
       	{{/each}}
     	</ul>
     	{{/if}}
