--- a/theme/partials/projects.hbs
+++ b/theme/partials/projects.hbs
@@ -26,7 +26,7 @@
           {{#if endDate}}
           <span class="endDate">- {{MY endDate}}</span>
           {{else}}
-          <span class="endDate">- Current</span>
+          <span class="endDate"></span>
           {{/if}}
         </div>
         {{/if}}
